--- a/index.html
+++ b/index.html
@@ -5,23 +5,26 @@
 		
 		<!--Assets-->
 		
-		
+		<img id="tileset" src="gfx/tileset.png" style="display : none;">
+
 		<!--/Assets-->
 		
         <!--<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>-->
         <script type="text/javascript" src="GameMaths.js"></script>
         <script type="text/javascript" src="2D Shapes.js"></script>
         <script type="text/javascript" src="Grid2D.js"></script>
-        <script type="text/javascript" src="Tileset.js"></script>
         <script type="text/javascript" src="Random.js"></script>
+        <script type="text/javascript" src="Tileset.js"></script>
         <script type="text/javascript" src="Animation.js"></script>
 		
 	</head>
 	
 	<body style="margin: 0; background : #FFFFFF;">
-		<canvas id="canvas" width="800" height="600" style = "background : #000000; display: block;">
+		<canvas id="canvas" width="1200" height="320" style = "background : #FFFFFF; border : 2px solid #000000;">
 			
             <script type="text/javascript" src="GameBoilerplate.js"></script>
+
+            <script type="text/javascript" src="World.js"></script>
             
 			<script type="text/javascript" src="game.js"></script>
 		</canvas>
