--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <script type="text/javascript" src="GameBoilerplate.js"></script>
 
             <script type="text/javascript" src="World.js"></script>
+            <script type="text/javascript" src="Physics.js"></script>
+            <script type="text/javascript" src="Player.js"></script>
             
 			<script type="text/javascript" src="game.js"></script>
 		</canvas>
