All sorts of crap added. I should probably commit more often.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<!--Assets-->
 		
 		<img id="tileset" src="gfx/tileset.png" style="display : none;">
+		<img id="Derrick" src="gfx/Derrick.png" style="display : none;">
 
 		<!--/Assets-->
 		
@@ -20,7 +21,7 @@
 	</head>
 	
 	<body style="margin: 0; background : #FFFFFF;">
-		<canvas id="canvas" width="1200" height="320" style = "background : #FFFFFF; border : 2px solid #000000;">
+		<canvas id="canvas" width="1200" height="320" alt="Stop using IE6" style = "background : #FFFFFF; border : 2px solid #000000;">
 			
             <script type="text/javascript" src="GameBoilerplate.js"></script>
 
@@ -30,5 +31,18 @@
             
 			<script type="text/javascript" src="game.js"></script>
 		</canvas>
+
+		<!-- Google Ads. A guy gotta' make a livin'. -->
+		<div style="float: bottom; position: fixed; bottom: 0;">
+			<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+			<!-- Standard Ad Banner -->
+			<ins class="adsbygoogle"
+				 style="display:inline-block;width:970px;height:90px"
+				 data-ad-client="ca-pub-6972452219567390"
+				 data-ad-slot="1886876060"></ins>
+			<script>
+			(adsbygoogle = window.adsbygoogle || []).push({});
+			</script>
+		</div>
 	</body>
 </html>
