--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		
 		<img id="tileset" src="gfx/tileset.png" style="display : none;">
 		<img id="Derrick" src="gfx/Derrick.png" style="display : none;">
+		<img id="arms" src="gfx/arms.png" style="display : none;">
 
 		<!--/Assets-->
 		
@@ -28,6 +29,7 @@
             <script type="text/javascript" src="World.js"></script>
             <script type="text/javascript" src="Physics.js"></script>
             <script type="text/javascript" src="Player.js"></script>
+            <script type="text/javascript" src="Particles.js"></script>
             
 			<script type="text/javascript" src="game.js"></script>
 		</canvas>
