Finally playable. I'm not doing this in the right order.

--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html>
 	
 	<head>
+
+		<title>Derrick Mcslick</title> <!-- or: "How I learned to shoehorn the theme in to another Run n' Gun". -->
 		
 		<!--Assets-->
-		
+
+		<img id="title" src="gfx/title.png" style="display : none;">
 		<img id="tileset" src="gfx/tileset.png" style="display : none;">
 		<img id="Derrick" src="gfx/Derrick.png" style="display : none;">
 		<img id="arms" src="gfx/arms.png" style="display : none;">
+		<img id="bat" src="gfx/Bat.png" style="display : none;">
+		<img id="rabbit" src="gfx/rabbit.png" style="display : none;">
 
 		<!--/Assets-->
 		
@@ -28,8 +33,10 @@
 
             <script type="text/javascript" src="World.js"></script>
             <script type="text/javascript" src="Physics.js"></script>
+            <script type="text/javascript" src="hasHealth.js"></script>
             <script type="text/javascript" src="Player.js"></script>
             <script type="text/javascript" src="Particles.js"></script>
+            <script type="text/javascript" src="Enemies.js"></script>
             
 			<script type="text/javascript" src="game.js"></script>
 		</canvas>
