All enemies added.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	
 	<head>
 
-		<title>Derrick Mcslick</title> <!-- or: "How I learned to shoehorn the theme in to another Run n' Gun". -->
+		<title>Derrick McSlick</title> <!-- or: "How I learned to shoehorn the theme in to another Run n' Gun". -->
 		
 		<!--Assets-->
 
@@ -13,6 +13,9 @@
 		<img id="arms" src="gfx/arms.png" style="display : none;">
 		<img id="bat" src="gfx/Bat.png" style="display : none;">
 		<img id="rabbit" src="gfx/rabbit.png" style="display : none;">
+		<img id="slime" src="gfx/slime.png" style="display : none;">
+		<img id="zombie" src="gfx/zombie.png" style="display : none;">
+		<img id="eye" src="gfx/eye.png" style="display : none;">
 
 		<!--/Assets-->
 		
